--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
+    "next-auth": "^4.24.11",
     "nookies": "^2.5.2",
     "react": "^18.3.0",
     "react-day-picker": "^8.10.1",
